--- a/services/auth/package.json
+++ b/services/auth/package.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "scripts": {
         "build": "npx tsc",
-        "start": "node dist/index.js",
+        "start": "node ./src/",
         "dev": "nodemon ./src/index.ts"
     },
     "dependencies": {
