--- a/services/articles/dockerfile
+++ b/services/articles/dockerfile
@@ -1,1 +1,14 @@
-FROM go
+FROM golang:alpine3.17
+
+ENV DB_URL="host=db-postgresql-syd1-96283-do-user-12994114-0.b.db.ondigitalocean.com user=doadmin password=AVNS_EU1LYCSS7HpHQRwitkM dbname=defaultdb port=25060 sslmode=require"
+
+WORKDIR /go/src/app
+
+COPY go.mod go.sum ./
+RUN go mod download
+
+COPY . .
+
+EXPOSE 3000
+
+CMD ["go", "run", "main.go"]
