--- a/services/auth/.env
+++ b/services/auth/.env
@@ -1,5 +1,6 @@
 # APP
-PORT=4000
+PORT=3001
+NODE_ENV=development
 
 # DATABASE
 MONGO_URL="mongodb+srv://moon:moon123@cluster0.4colf4i.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
