--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
         "@types/node": "18.11.9",
         "@types/react": "18.0.25",
         "@types/react-dom": "18.0.9",
+        "axios": "^1.2.0",
         "next": "13.0.5",
         "react": "18.2.0",
         "react-dom": "18.2.0",
@@ -22,8 +23,10 @@
         "usehooks-ts": "^2.9.1"
     },
     "devDependencies": {
+        "@types/redux-logger": "^3.0.9",
         "autoprefixer": "^10.4.13",
         "postcss": "^8.4.19",
+        "redux-logger": "^3.0.6",
         "tailwindcss": "^3.2.4"
     }
 }
