--- a/services/auth/package.json
+++ b/services/auth/package.json
@@ -5,12 +5,13 @@
     "license": "MIT",
     "scripts": {
         "build": "npx tsc",
-        "start": "node ./src/",
-        "dev": "nodemon ./src/index.ts"
+        "start": "node dist/index.js",
+        "dev": "concurrently \"npx tsc --watch \" \"nodemon -q dist/index.js\""
     },
     "dependencies": {
         "ansi-colors": "^4.1.3",
         "bcrypt": "^5.1.0",
+        "bcryptjs": "^2.4.3",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "express-async-errors": "^3.1.1",
