--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
         "@types/react-dom": "18.0.9",
         "axios": "^1.2.0",
         "next": "13.0.5",
+        "nextjs-cors": "^2.1.2",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-icons": "^4.7.1",
