--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
         "@types/react": "18.0.25",
         "@types/react-dom": "18.0.9",
         "axios": "^1.2.0",
+        "jwt-decode": "^3.1.2",
         "next": "13.0.5",
         "nextjs-cors": "^2.1.2",
         "react": "18.2.0",
@@ -27,7 +28,6 @@
         "@types/redux-logger": "^3.0.9",
         "autoprefixer": "^10.4.13",
         "postcss": "^8.4.19",
-        "redux-logger": "^3.0.6",
         "tailwindcss": "^3.2.4"
     }
 }
