--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-icons": "^4.7.1",
+        "react-loader-spinner": "^5.3.4",
         "react-redux": "^8.0.5",
         "typescript": "4.9.3",
         "usehooks-ts": "^2.9.1"
