--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -13,7 +13,17 @@
         "resolveJsonModule": true,
         "isolatedModules": true,
         "jsx": "preserve",
-        "incremental": true
+        "incremental": true,
+        "baseUrl": ".",
+        "paths": {
+            "@/pages/*": ["pages/*"],
+            "@/components/*": ["components/*"],
+            "@/types": ["types"],
+            "@/utilities": ["utilities"],
+            "@/store/*": ["store/*"],
+            "@/features/*": ["features/*"],
+            "@/api": ["api"]
+        }
     },
     "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
     "exclude": ["node_modules"]
