--- a/services/articles/local.env
+++ b/services/articles/local.env
@@ -1,2 +1,5 @@
 PORT=3002
 DB_URL="host=db-postgresql-syd1-96283-do-user-12994114-0.b.db.ondigitalocean.com user=doadmin password=AVNS_EU1LYCSS7HpHQRwitkM dbname=defaultdb port=25060 sslmode=require"
+
+
+AUTH_SERVICE_URL = "http://localhost:3001/users"
