--- a/services/auth/.env
+++ b/services/auth/.env
@@ -6,4 +6,4 @@ NODE_ENV=development
 MONGO_URL="mongodb+srv://moon:moon123@cluster0.4colf4i.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
 
 # JWT
-JWT_SECRET="my_secret"
+JWT_SECRET="my_secret this is my-secret this love it hahah!!!!"
