implement: like feature on client and server

--- a/services/articles/local.env
+++ b/services/articles/local.env
@@ -3,3 +3,5 @@ DB_URL="host=db-postgresql-syd1-96283-do-user-12994114-0.b.db.ondigitalocean.com
 
 
 AUTH_SERVICE_URL = "http://localhost:3001/users"
+
+JWT_SECRET="my_secret this is my-secret this love it hahah!!!!"
