--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -22,6 +22,7 @@ COPY --from=deps /app/node_modules ./node_modules
 COPY . .
 COPY .env.production .
 
+# Production image, copy all the files and run next
 FROM node:19.1.0-alpine3.16 AS runnder
 
 WORKDIR /app
@@ -29,10 +30,6 @@ WORKDIR /app
 ENV NODE_ENV=production
 
 COPY --from=builder /app/public ./public
-
-# Automatically leverage output traces to reduce image size
-COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
-COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
 
 EXPOSE 3000
 
