--- a/services/comments/FeedComments/Properties/launchSettings.json
+++ b/services/comments/FeedComments/Properties/launchSettings.json
@@ -17,7 +17,9 @@
       "launchUrl": "swagger",
       "applicationUrl": "http://localhost:3003",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+          "ASPNETCORE_ENVIRONMENT": "Development",
+          "ArticleURL": "http://localhost:3002/api/articles",
+          "UserURL": "http://localhost:3001/api/users"
       }
     },
     "https": {
@@ -27,7 +29,9 @@
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7208;http://localhost:3003",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+          "ASPNETCORE_ENVIRONMENT": "Development",
+          "ArticleURL": "http://localhost:3002/api/articles",
+          "UserURL": "http://localhost:3001/api/users"
       }
     },
     "IIS Express": {
@@ -35,7 +39,9 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+          "ASPNETCORE_ENVIRONMENT": "Development",
+          "ArticleURL": "http://localhost:3002/api/articles",
+          "UserURL": "http://localhost:3001/api/users"
       }
     }
   }
