--- a/services/auth/dockerfile
+++ b/services/auth/dockerfile
@@ -1,14 +1,9 @@
-FROM node:19.1.0-alpine3.16
+FROM node:19.1.0-alpine3.16 as builder
 
 WORKDIR /app
-
 COPY package*.json tsconfig.json ./
-COPY . .
-
-RUN ls -a
-
 RUN yarn install
-RUN yarn build
+COPY . .
 
 EXPOSE 3001
 
