db migration from digital ocean to railway in article

--- a/services/articles/local.env
+++ b/services/articles/local.env
@@ -1,5 +1,5 @@
 PORT=3002
-DB_URL="host=db-postgresql-syd1-96283-do-user-12994114-0.b.db.ondigitalocean.com user=doadmin password=AVNS_EU1LYCSS7HpHQRwitkM dbname=defaultdb port=25060 sslmode=require"
+DB_URL="host=containers-us-west-59.railway.app user=postgres password=uMrUjp0UvwkE713Y2Tim dbname=railway port=7369"
 
 
 AUTH_SERVICE_URL = "http://localhost:3001/api/users"
